@@ -4,14 +4,14 @@
 
     <groupId>com.telamin</groupId>
     <artifactId>mongoose</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.7-SNAPSHOT</version>
     <name>telamin :: mongoose</name>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <fluxtion.version>9.7.14</fluxtion.version>
+        <fluxtion.version>0.9.3</fluxtion.version>
     </properties>
     <description>
         A high-performance opinionated event processing server, connecting event source and event sinks to event handlers
@@ -43,8 +43,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fluxtion</groupId>
-            <artifactId>runtime</artifactId>
+            <groupId>com.telamin.fluxtion</groupId>
+            <artifactId>fluxtion-runtime</artifactId>
             <version>${fluxtion.version}</version>
         </dependency>
         <dependency>
@@ -190,6 +190,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
